--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -5,12 +5,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>Saudação</title>
+        <title>inicio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1>Boas vindas!</h1> 
-                    <p>Parabéns, este é seu primeiro projeto MVC em ação!</p> 
+                    <p>Bem-vindo ao condomínio!</p> 
     </body>
 </html>
