--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -5,12 +5,36 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>inicio</title>
+        <title>ADM Condomínios</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Boas vindas!</h1> 
-                    <p>Bem-vindo ao condomínio!</p> 
-    </body>
+    <!-- Barra de Menu -->
+    <nav>
+        <a href="#">Início</a>
+        <a href="#">Moradores</a>
+        <a href="#">Encomendas</a>
+        <a href="#">Reservas</a>
+        <a href="#">Visualizar Encomendas</a>
+    </nav>
+
+    <!-- Container Principal -->
+    <div class="container">
+        <h1>Bem-vindo ao seu condomínio!</h1>
+        <p>Escolha uma das opções abaixo para começar:</p>
+
+        <!-- Botões -->
+        <a href="#" class="button">Cadastrar Morador</a>
+        <a href="#" class="button">Cadastrar Encomenda</a>
+        <a href="#" class="button">Visualizar Encomenda</a>
+        <a href="#" class="button">Reservar uma área de lazer</a>
+    </div>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>Em caso de problemas entrar em contato:ajudacondo@outlook.com.br.</p>
+        <p><a href="#">Política de Privacidade</a> | <a href="#">Termos de Uso</a></p>
+    </footer>
+</body>
 </html>
