--- a/src/main/resources/templates/cadastroe.html
+++ b/src/main/resources/templates/cadastroe.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Cadastrar Encomenda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS externo -->
@@ -43,7 +43,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </div>
 
             <!-- Botão para cadastrar -->
-            <button type="submit" class="button">Cadastrar Encomenda</button>
+            <button  type="submit" class="button">Cadastrar Encomenda</button>
         </form>
     </div>
 
