--- a/src/main/resources/templates/cadastroe.html
+++ b/src/main/resources/templates/cadastroe.html
@@ -3,7 +3,7 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Cadastrar Encomenda</title>
         <meta charset="UTF-8">
@@ -45,6 +45,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <!-- Botão para cadastrar -->
             <button  type="submit" class="button">Cadastrar Encomenda</button>
         </form>
+        
+        
     </div>
 
     <!-- Rodapé -->
